--- a/LambdaService/deploy.yml
+++ b/LambdaService/deploy.yml
@@ -9,7 +9,7 @@ steps:
 - ${{ each sourceDirectory in parameters.buildDirectories }}:
   - ${{ if ne(sourceDirectory.packageAs, 'image') }}:
     - download: current
-      artifact: ${{ sourceDirectory.path }}
+      artifact: ${{ replace(sourceDirectory.path, '/', '_')}}
       displayName: Get ${{ sourceDirectory.path }} Artifact
 
     - script: mv $(Pipeline.Workspace)/${{ sourceDirectory.path }}/* terraform/build
