--- a/LambdaService/deploy.yml
+++ b/LambdaService/deploy.yml
@@ -10,7 +10,7 @@ steps:
   - ${{ if ne(sourceDirectory.packageAs, 'image') }}:
     - download: current
       artifact: ${{ replace(sourceDirectory.path, '/', '_') }}
-      displayName: Get ${{ sourceDirectory.path }} Artifact
+      displayName: Get ${{ replace(sourceDirectory.path, '/', '_') }} Artifact
 
-    - script: mv $(Pipeline.Workspace)/${{ sourceDirectory.path }}/* terraform/build
-      displayName: Stage ${{ sourceDirectory.path }} Artifact
+    - script: mv $(Pipeline.Workspace)/${{ replace(sourceDirectory.path, '/', '_') }}/* terraform/build
+      displayName: Stage ${{ replace(sourceDirectory.path, '/', '_') }} Artifact
