--- a/Terraform/validate.yml
+++ b/Terraform/validate.yml
@@ -39,6 +39,7 @@ jobs:
 
   # Allow Terraform Apply to be skipped if there are no changes
   - script: |
+      cat $tfjson
       isResourceChange=$(jq -er '.resource_changes | map(.change.actions) | flatten | map(select(. != "no-op")) | length | . > 0' $tfjson)
       isOutputChange=$(jq -er '.output_changes | map(.["actions"]) | flatten | map(select(. != "no-op")) | length | . > 0' $tfjson)
       echo "##vso[task.setvariable variable=isResourceChange;isOutput=true]${isResourceChange}"
