--- a/Terraform/validate.yml
+++ b/Terraform/validate.yml
@@ -41,7 +41,9 @@ jobs:
   - script: |
       isResourceChange=$(jq -er '.resource_changes | try map(.change.actions) catch [] | flatten | map(select(. != "no-op")) | length | . > 0' $tfjson)
       isOutputChange=$(jq -er '.output_changes | try map(.["actions"]) catch [] | flatten | map(select(. != "no-op")) | length | . > 0' $tfjson)
+      echo "Resource Change Detected: ${isResourceChange}"
       echo "##vso[task.setvariable variable=isResourceChange;isOutput=true]${isResourceChange}"
+      echo "Output Change Detected: ${isOutputChange}"
       echo "##vso[task.setvariable variable=isOutputChange;isOutput=true]${isOutputChange}"
     name: TerraformCondition
     displayName: Requires Change?
