standardise param name

--- a/LambdaService/image/validate.yml
+++ b/LambdaService/image/validate.yml
@@ -1,7 +1,7 @@
 parameters:
 - name: directory
   type: string
-- name: dockerfilePath
+- name: buildImage
   type: string
   default: './Dockerfile'
 
