--- a/LambdaService/image/validate.yml
+++ b/LambdaService/image/validate.yml
@@ -3,7 +3,7 @@ parameters:
   type: string
 - name: buildImage
   type: string
-  default: './Dockerfile'
+  default: ''
 
 steps:  
 - checkout: self
@@ -17,7 +17,7 @@ steps:
   displayName: Get Runtime
   name: GetRuntime
   env:
-    dockerfilePath: '${{ parameters.directory }}/${{ parameters.buildImage }}'
+    dockerfilePath: ${{ coalesce(parameters.buildImage, 'parameters.directory/Dockerfile') }}
 
 - task: npmAuthenticate@0
   inputs:
