--- a/LambdaService/image/validate.yml
+++ b/LambdaService/image/validate.yml
@@ -11,9 +11,8 @@ steps:
 
 - script: |
     runtime=$(grep -Po 'FROM \K[^:]*' $dockerfilePath | xargs -L 1 basename)
+    echo "Setting Runtime: ${runtime}"
     echo "##vso[task.setvariable variable=value;isOutput=true]${runtime}"
-    echo "RUNTIME: ${runtime}"
-    echo "PATH: ${dockerfilePath}"
   displayName: Get Runtime
   name: GetRuntime
   env:
