--- a/LambdaService/image/validate.yml
+++ b/LambdaService/image/validate.yml
@@ -11,13 +11,13 @@ steps:
 
 - script: |
     runtime=$(grep -Po 'FROM \K[^:]*' $dockerfilePath | xargs -L 1 basename)
+    echo "Checking Dockerfile at: ${dockerfilePath}"
     echo "Setting Runtime: ${runtime}"
     echo "##vso[task.setvariable variable=value;isOutput=true]${runtime}"
-    echo $dockerfilePath
   displayName: Get Runtime
   name: GetRuntime
   env:
-    dockerfilePath: ${{ coalesce(parameters.buildImage, 'parameters.directory/Dockerfile') }}
+    dockerfilePath: ${{ coalesce(parameters.buildImage, format('{0}/{1}', parameters.directory, 'Dockerfile')) }}
 
 - task: npmAuthenticate@0
   inputs:
