--- a/LambdaService/image/validate.yml
+++ b/LambdaService/image/validate.yml
@@ -10,10 +10,14 @@ steps:
   submodules: true
 
 - script: |
-    runtime=$(grep -Po 'FROM \K[^:]*' $dockerfilePath | xargs -L 1 basename)
     echo "Checking Dockerfile at: ${dockerfilePath}"
-    echo "Setting Runtime: ${runtime}"
-    echo "##vso[task.setvariable variable=value;isOutput=true]${runtime}"
+    if test -f "$dockerfilePath"; then
+      runtime=$(grep -Po 'FROM \K[^:]*' $dockerfilePath | xargs -L 1 basename)
+      echo "Setting Runtime: ${runtime}"
+      echo "##vso[task.setvariable variable=value;isOutput=true]${runtime}"
+    else
+      echo "##vso[task.logissue type=error]Error: no Dockerfile found at ${dockerfilePath}."
+    fi
   displayName: Get Runtime
   name: GetRuntime
   env:
