--- a/LambdaService/image/validate.yml
+++ b/LambdaService/image/validate.yml
@@ -17,6 +17,7 @@ steps:
       echo "##vso[task.setvariable variable=value;isOutput=true]${runtime}"
     else
       echo "##vso[task.logissue type=error]Error: no Dockerfile found at ${dockerfilePath}."
+      exit 1
     fi
   displayName: Get Runtime
   name: GetRuntime
