--- a/LambdaService/image/validate.yml
+++ b/LambdaService/image/validate.yml
@@ -16,7 +16,7 @@ steps:
       echo "Setting Runtime: ${runtime}"
       echo "##vso[task.setvariable variable=value;isOutput=true]${runtime}"
     else
-      echo "##vso[task.logissue type=error]Error: no Dockerfile found at ${dockerfilePath}."
+      echo "##vso[task.logissue type=error]Error: no Dockerfile found at ${dockerfilePath}"
       exit 1
     fi
   displayName: Get Runtime
