--- a/LambdaService/image/validate.yml
+++ b/LambdaService/image/validate.yml
@@ -15,6 +15,12 @@ steps:
       runtime=$(grep -Po 'FROM \K[^:]*' $dockerfilePath | xargs -L 1 basename)
       echo "Setting Runtime: ${runtime}"
       echo "##vso[task.setvariable variable=value;isOutput=true]${runtime}"
+
+      case $runtime in
+        nodejs)
+          echo "NODEJS!"
+          ;;
+      esac
     else
       echo "##vso[task.logissue type=error]Error: no Dockerfile found at ${dockerfilePath}"
       exit 1
