--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -113,7 +113,6 @@ stages:
             - template: ${{ parameters.deployType }}/${{ coalesce(sourceDirectory.packageAs, 'zip') }}/validate.yml
               parameters:
                 directory: ${{ sourceDirectory.path }}
-                buildImage: ${{ sourceDirectory.buildImage }}
 
   - stage: Deploy
     dependsOn:
@@ -164,18 +163,25 @@ stages:
     - ${{ if ne(parameters.buildDirectories, '') }}:
       # multi-source build  
       - ${{ each sourceDirectory in parameters.buildDirectories }}:
-        - job: Build_${{ replace(sourceDirectory.path, '/', '_') }}
-          displayName: Build ${{ replace(sourceDirectory.path, '/', '_') }}
-          ${{ if ne(parameters.terraformOutputEnv, '') }}:
-            dependsOn: PublishTFOutputs
-            condition: succeeded('PublishTFOutputs')
-          ${{ if and(ne(sourceDirectory.packageAs, 'image'), not(endsWith(sourceDirectory.buildImage, 'Dockerfile'))) }}:
-            container: 
-              image: ${{ sourceDirectory.buildImage }}
-          steps:
-          - template: ${{ parameters.deployType }}/${{ coalesce(sourceDirectory.packageAs, 'zip') }}/build.yml
+        - ${{ each sourceDirectory in parameters.buildDirectories }}:
+        - ${{ if or(eq(sourceDirectory.packageAs, 'image'), endsWith(sourceDirectory.buildImage, 'Dockerfile')) }}:
+          - template: Docker/deploy.yml
             parameters:
               directory: ${{ sourceDirectory.path }}
+              buildImage: ${{ sourceDirectory.buildImage }}
+              
+        - ${{ if and(ne(sourceDirectory.packageAs, 'image'), not(endsWith(sourceDirectory.buildImage, 'Dockerfile'))) }}:
+          - job: Build_${{ replace(sourceDirectory.path, '/', '_') }}
+            displayName: Build ${{ replace(sourceDirectory.path, '/', '_') }}
+            ${{ if ne(parameters.terraformOutputEnv, '') }}:
+              dependsOn: PublishTFOutputs
+              condition: succeeded('PublishTFOutputs')
+            container: 
+              image: ${{ sourceDirectory.buildImage }}  
+            steps:
+            - template: ${{ parameters.deployType }}/${{ coalesce(sourceDirectory.packageAs, 'zip') }}/build.yml
+              parameters:
+                directory: ${{ sourceDirectory.path }}
 
     - ${{ if in(parameters.deployType, 'ReactApp') }}:
       - deployment: DeployArtifacts
