--- a/Docker/validate.yml
+++ b/Docker/validate.yml
@@ -4,11 +4,13 @@ parameters:
 - name: buildImage
   type: string
   default: ''
+- name: repoName
+  type: string
 
 jobs:
 - template: build.yml
   parameters:
-    directory: ${{ parameters.directory }}
-    buildImage: ${{ parameters.buildImage }}
+    buildContext: ${{ parameters.directory }}
+    dockerfilePath: ${{ parameters.buildImage }}
+    repoName: ${{ parameters.repoName }}
     condition: in(variables.ENVIRONMENT_NAME, 'DEV', 'QA')
-    jobNamePrefix: Validate
